{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "1a6317ad-679a-49dc-9299-30c00f20867b",
            "actions": [
                {
                    "name": "Jump",
                    "id": "c742a001-f0b8-4bb3-b2cb-7d403ec3b483",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "MovePlayer",
                    "id": "e8da132b-3e42-4f05-ada1-6cfbefa7be8c",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "MoveCamera",
                    "id": "d2003b06-c2c4-4f15-b9e5-3b0f95b29996",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "RunButton",
                    "id": "39d8d438-c8c7-4c2d-8b03-94253da8f619",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Agacharse",
                    "id": "d6e4ae2b-a4cb-4773-88ce-1b77d71dd4bd",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee3a4219-95ed-403b-8899-27ec6acead09",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "b41384df-0fec-48e8-8d18-cf0f42ee7a5c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "f44d2c5b-539a-41ca-91bf-00a249409ec6",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunButton",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "7dd8f250-b012-4e3f-826a-bef16038cfd1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "5ac03d39-19a2-489a-9435-14668d10bf5e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Agacharse",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}